change filename syntax in config files

--- a/test/data/testsuite1.cfg
+++ b/test/data/testsuite1.cfg
@@ -2,7 +2,7 @@
 process PROD  = {
 
 	source = PoolSource { 
-		untracked vstring fileNames = {'data/simevent.root'}
+		untracked vstring fileNames = {'file:data/simevent.root'}
 
 		untracked int32 maxEvents = 1
 	}
@@ -13,7 +13,7 @@ process PROD  = {
 
 	module mix = MixingModule {
 	       secsource input = PoolRASource  {
-			       untracked vstring fileNames = {'data/simevent.root'}
+			       untracked vstring fileNames = {'file:data/simevent.root'}
 			       string type = "fixed"
 		               double averageNumber = 1
 		               int32 minBunch = xxx
