adapt to 0_6_0 series

--- a/test/data/testsuite2.cfg
+++ b/test/data/testsuite2.cfg
@@ -2,7 +2,7 @@
 process PROD  = {
 
 	source = PoolSource { 
-		untracked string fileName = "Cum_xxx.root"
+		untracked vstring fileNames = {"file:Cum_xxx.root"}
 		untracked int32 maxEvents = 1
 	}
 
