--- a/test/data/testsuite1.cfg
+++ b/test/data/testsuite1.cfg
@@ -1,6 +1,11 @@
 
 process PROD  = {
-
+        service = MessageLogger {
+ 		untracked vstring destinations = {"cout"}
+		untracked PSet cout = {
+			untracked PSet default = { untracked int32 limit = 0 }
+		}
+	} 
 	source = PoolSource { 
 		untracked vstring fileNames = {'file:data/simevent.root'}
 
