cosmetical changes and recreation of input data file

--- a/test/data/testsuite1.cfg
+++ b/test/data/testsuite1.cfg
@@ -1,5 +1,5 @@
 
-process PROD  = {
+process PRODVAL1  = {
         service = MessageLogger {
  		untracked vstring destinations = {"cout"}
 		untracked PSet cout = {
@@ -7,7 +7,7 @@ process PROD  = {
 		}
 	} 
 	source = PoolSource { 
-		untracked vstring fileNames = {'file:data/simevent.root'}
+		untracked vstring fileNames = {'file:../data/simevent.root'}
 
 		untracked int32 maxEvents = 1
 	}
@@ -18,7 +18,7 @@ process PROD  = {
 
 	module mix = MixingModule {
 	       secsource input = PoolRASource  {
-			       untracked vstring fileNames = {'file:data/simevent.root'}
+			       untracked vstring fileNames = {'file:../data/simevent.root'}
 			       string type = "fixed"
 		               double averageNumber = 1
 		               int32 minBunch = xxx
