--- a/test/testsuite2.cfg
+++ b/test/testsuite2.cfg
@@ -2,7 +2,7 @@
 process PRODVAL2  = {
 
 	source = PoolSource { 
-		untracked vstring fileNames = {"file:Cum_xxx.root"}
+		untracked vstring fileNames = {"file:/tmp/Cum_xxx.root"}
 		untracked int32 maxEvents = 1
 	}
 
@@ -13,4 +13,6 @@ process PRODVAL2  = {
 		string fileName = "histos.root"
 	}
 	path p = { test}
+
+        service = DaqMonitorROOTBackEnd{ }
 }
