--- a/test/globalTest2.cfg
+++ b/test/globalTest2.cfg
@@ -1,6 +1,8 @@
 
 process PRODVAL2  = {
 
+        service = DaqMonitorROOTBackEnd{ }
+
 	source = PoolSource { 
 		untracked vstring fileNames = {"file:/tmp/Cum_global.root"}
 		untracked int32 maxEvents = -1
