adapt cfg files to new conventions

--- a/test/globalTest2.cfg
+++ b/test/globalTest2.cfg
@@ -5,8 +5,8 @@ process PRODVAL2  = {
 
 	source = PoolSource { 
 		untracked vstring fileNames = {"file:/tmp/Cum_global.root"}
-		untracked int32 maxEvents = -1
 	}
+        untracked PSet maxEvents = {untracked int32 input = 10}
 
 	module test = GlobalTest {
                 int32 minBunch = -5
