--- a/test/testsuite2.cfg
+++ b/test/testsuite2.cfg
@@ -3,8 +3,9 @@ process PRODVAL2  = {
 
 	source = PoolSource { 
 		untracked vstring fileNames = {"file:/tmp/Cum_xxx.root"}
-		untracked int32 maxEvents = 1
 	}
+
+        untracked PSet maxEvents = {untracked int32 input = 1}
 
 	module test = TestSuite {
 		int32 BunchNr = xxx
