adapt to templated CF

--- a/test/globalTest1.cfg
+++ b/test/globalTest1.cfg
@@ -23,7 +23,7 @@ include "SimGeneral/MixingModule/data/mixLowLumPU.cfi"
                untracked vstring outputCommands =
                {
                   "drop *_*_*_*",
-                  "keep CrossingFrame_*_*_*"
+                  "keep *CrossingFrame_*_*_*"
                }
 }
 
