--- a/test/testsuite1.cfg
+++ b/test/testsuite1.cfg
@@ -25,7 +25,7 @@ process PRODVAL1  = {
 	        untracked string fileName = '/tmp/Cum_xxx.root'
                 untracked vstring outputCommands =   {
                   "drop *_*_*_*",
-                  "keep CrossingFrame*_*_*_*"
+                  "keep *CrossingFrame*_*_*_*"
         	}
 	}
 
