adapt to lumi config

--- a/test/globalTest1.cfg
+++ b/test/globalTest1.cfg
@@ -28,7 +28,7 @@ include "SimGeneral/MixingModule/data/mixLowLumPU.cfi"
 }
 
         replace mix.input.type="fixed"
-        replace mix.input.averageNumber=20
+        replace mix.input.nbPileupEvents= {double averageNumber=20}
 
 	path p = { mix }
         endpath outpath = { out }
