--- a/test/testsuite1.cfg
+++ b/test/testsuite1.cfg
@@ -37,7 +37,7 @@ process PRODVAL1  = {
         untracked vstring fileNames = {'rfio:/castor/cern.ch/cms/store/RelVal/2007/7/11/RelVal-RelVal160pre4SingleEPt35-1184176348/0000/5EF3794C-7530-DC11-833F-000423D6C8EE.root'}
 
   			       string type = "fixed"
-		               double averageNumber = 1
+		               PSet nbPileupEvents = {double averageNumber = 1}
 		               int32 minBunch = xxx
 		               int32 maxBunch = xxx
 			       int32 seed = 1234567
